# dubsmith

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: architecture.md  setup.md  troubleshooting.md
src/: alerts.py  api.py  audit.py  config.py  daemon.py  discover.py  downloader.py  events.py  health.py  lang.py  library_server.py  logbuf.py  main.py  mux.py  notify.py  probe.py  queue.py  reconcile.py  scanner.py  security.py  settings_store.py  shows.py  sonarr.py  sonarr_cache.py  sources.py  staging.py  sync.py  users.py  worker.py
tests/: test_alerts_health.py  test_audit.py  test_config.py  test_discover.py  test_downloader_source.py  test_events.py  test_lang.py  test_library_server.py  test_mux_trim.py  test_mux_workdir.py  test_probe_cache.py  test_queue.py  test_reconcile.py  test_season_offset_probe.py  test_security.py  test_settings_store.py  test_sonarr_cache.py  test_staging.py  test_sync.py  test_users.py
web/static/: tokens.css
web/templates/: add_show.html  base.html  dashboard.html  discover.html  library.html  login.html  logs.html  profile.html  queue.html  settings.html  show_detail.html  shows.html  users.html
